--- a/ProAgil.API/appsettings.json
+++ b/ProAgil.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": {"DefaultConnection" : "DataSource=ProAgil.db"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
