--- a/ProAgil.API/appsettings.Development.json
+++ b/ProAgil.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings" : {
+    "Token" : "Super Secret Key"
+  },
   "ConnectionStrings": {"DefaultConnection" : "DataSource=ProAgil.db"},
   "Logging": {
     "LogLevel": {
