--- a/ProAgil-App/package.json
+++ b/ProAgil-App/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "bootstrap": "^4.5.0",
     "ngx-bootstrap": "^5.6.1",
