--- a/ProAgil.API/Dockerfile.multi
+++ b/ProAgil.API/Dockerfile.multi
@@ -17,7 +17,7 @@ RUN dotnet publish -c Release -o dist
 FROM base AS final
 WORKDIR /dist
 COPY --from=publish /app/dist .
-ENTRYPOINT [ "dotnet", "mvc1.dll" ]
+ENTRYPOINT ["dotnet","ProAgil.API.dll"]
 
 
 
