--- a/ProAgil.API/appsettings.Development.json
+++ b/ProAgil.API/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Token" : "Super Secret Key"
   },
   "ConnectionStrings": {"DefaultConnection" : "DataSource=ProAgil.db"},
-  "Logging": {
+  "ConnectionStringSQLServer": {"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ProAgil;Id=usuariobanco; Password=senhabanco;"},  "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
