--- a/ProAgil.API/appsettings.json
+++ b/ProAgil.API/appsettings.json
@@ -3,6 +3,7 @@
     "Token" : "Super Secret Key"
   },
   "ConnectionStrings": {"DefaultConnection" : "DataSource=ProAgil.db"},
+  "ConnectionStringSQLServer": {"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ProAgil;Id=usuariobanco; Password=senhabanco;"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
